--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # OpenAI API Key
 OPENAI_API_KEY=
 
+#perplexity API Key
+PERPLEXITY_API_KEY=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
 # LinkedIn API Credentials
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
